tests/ui/frontmatter/frontmatter-invalid-multiple.rs
---cargo
---

---buck
//~^ ERROR expected item, found `-`
---

#![feature(frontmatter)]

fn main() {
}
